[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/framework/dialogue/DialogPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/framework/dialogue/loaders/DialogFileLoader.gd" type="Script" id=2]
[ext_resource path="res://addons/framework/examples/dialogue/Main.gd" type="Script" id=3]
[ext_resource path="res://addons/framework/examples/common/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/framework/examples/common/Character.gd" type="Script" id=5]
[ext_resource path="res://addons/framework/assets/materials/checker_material.tres" type="Material" id=6]

[sub_resource type="Resource" id=1]
script = ExtResource( 2 )
textures_path = "/Users/jsantosa/Projects/Godot/temp/Godot-4-Example/addons/framework/examples/dialogue/textures"
scripts_path = "/Users/jsantosa/Projects/Godot/temp/Godot-4-Example/addons/framework/examples/dialogue/scripts"

[sub_resource type="ProceduralSkyMaterial" id=2]

[sub_resource type="Sky" id=3]
sky_material = SubResource( 2 )

[sub_resource type="Environment" id=4]
background_mode = 2
sky = SubResource( 3 )

[sub_resource type="BoxShape3D" id=5]
size = Vector3( 6.62728, 5.49647, 8.67576 )

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="DialogPlayer" parent="." instance=ExtResource( 1 )]
dialog_loader = SubResource( 1 )
speed = 0.1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )
script = null

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform( 0.745488, 0.41787, 0.519262, -0.666519, 0.467379, 0.580783, 0, -0.779065, 0.626944, 0, 7.04207, 0 )
shadow_enabled = true
shadow_bias = 0.005
script = null

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
use_collision = true
size = Vector3( 200, 0.5, 200 )
material = ExtResource( 6 )
script = null

[node name="Player" parent="." instance=ExtResource( 4 )]
collision_layer = 3
collision_mask = 0
script = ExtResource( 5 )

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 5, 4 )
script = null

[node name="NPC" parent="." instance=ExtResource( 4 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, -20 )

[node name="Area3D" type="Area3D" parent="NPC"]
collision_layer = 0
collision_mask = 2
script = null

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC/Area3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2231, 0 )
shape = SubResource( 5 )
script = null

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Dialogue

This component provides a easy and flexible functionality to add diaogues to the game.
Basically, it needs the scripts with the dialogs, in a json format via Excel sheet, and images with the avatars.

Approach to the NPC at front and select 1, 2 or 3 keys to chooses between different dialogues. 
Then press Enter to continue o skip between dialogues."
align = 1
autowrap = true
structured_text_bidi_override_options = [  ]
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="NPC/Area3D" to="." method="_on_Area3D_body_entered"]
[connection signal="body_exited" from="NPC/Area3D" to="." method="_on_Area3D_body_exited"]
